--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -39,9 +39,9 @@
 		<section id="book_nav">
 			<span>전체 00건</span>
 			<div class="book_nav_right">
-				<input type="button" value="하트">
-				<input id="cart_btn" type="button" value="장바구니 담기">
-				<select>
+				<input id="heart_btn" type="button" value="하트" th:onclick="insert_heart_cart_checked(${#authentication.getName()})">
+				<input id="cart_btn" type="button" value="장바구니 담기" th:onclick="insert_heart_cart_checked(${#authentication.getName()})">
+				<select th:onclick="">
 					<option value="">2개씩 보기</option>
 					<option value="">3개씩 보기</option>
 					<option value="">5개씩 보기</option>
