--- a/src/main/resources/static/css/main/header.css
+++ b/src/main/resources/static/css/main/header.css
@@ -1,6 +1,6 @@
 /*===== Header =====*/
 header {
-    width: 1300px;
+    min-width: 1300px;
     display: flex;
     justify-content: space-between;
     align-items: center;
