--- a/src/main/resources/templates/main/cart.html
+++ b/src/main/resources/templates/main/cart.html
@@ -37,7 +37,6 @@
         </div>
 
         <section id="cart_book_info_container">
-            <hr>
             <div class="cart_book_info">
                 <div class="cart_book_info_left">
                     <input type="checkbox">
@@ -51,9 +50,9 @@
                     <div class="book_price_container">
                         <b>price</b>
                         <div class="book_count">
-                            <i class="fa-solid fa-plus"></i>
-                            <input type="text" value="1">
-                            <i class="fa-solid fa-minus"></i>
+                            <i class="fa-solid fa-plus plus"></i>
+                            <input class="book_count_value" type="number" value="1">
+                            <i class="fa-solid fa-minus minus"></i>
                         </div>
                     </div>
                 </div>
