--- a/src/main/resources/templates/main/home.html
+++ b/src/main/resources/templates/main/home.html
@@ -19,8 +19,9 @@
 		<section id="book_nav">
 			<span>전체 00건</span>
 			<div class="book_nav_right">
-				<input id="heart_btn" type="button" value="하트" th:onclick="insert_heart_cart_checked(${#authentication.getName()})">
-				<input id="cart_btn" type="button" value="장바구니 담기" th:onclick="insert_heart_cart_checked(${#authentication.getName()})">
+				<input type="hidden" th:value="${#authentication.getName()}">
+				<input id="heart_btn" type="button" value="하트" onclick="insert_heart_cart_checked('test', this)">
+				<input id="cart_btn" type="button" value="장바구니 담기" onclick="insert_heart_cart_checked('test', this)">
 				<select th:onclick="">
 					<option value="">2개씩 보기</option>
 					<option value="">3개씩 보기</option>
