--- a/src/main/resources/templates/main/cart.html
+++ b/src/main/resources/templates/main/cart.html
@@ -31,8 +31,8 @@
                 <span>전체</span>
             </div>
             <div>
-                <input id="heart" type="button" value="찜">
-                <input id="delete" type="button" value="삭제" onclick="delete_cart()">
+                <input type="button" value="찜" onclick="delete_heart_cart('heart')">
+                <input type="button" value="삭제" onclick="delete_heart_cart('delete')">
             </div>
         </div>
 
