--- a/src/main/resources/static/css/main/home.css
+++ b/src/main/resources/static/css/main/home.css
@@ -32,7 +32,7 @@ a {
 /*===== Section 2 =====*/
 #book_container {
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+    /*grid-template-rows: 1fr 1fr 1fr 1fr;*/
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 50px;
     margin-top: 30px;
@@ -41,6 +41,10 @@ a {
 .book {
     display: flex;
     flex-direction: column;
-    /*width: 300px;*/
-    /*height: 300px;*/
+    width: 300px;
+    height: 400px;
+}
+
+.book img {
+    width: 200px;
 }
