--- a/src/main/resources/templates/user/myPage/main.html
+++ b/src/main/resources/templates/user/myPage/main.html
@@ -10,6 +10,7 @@
 <body>
     <h1>유저의 마이페이지 입니다.</h1>
     <a href="/main">돌아가기</a>
+    <a href="/user/myPage/heart">찜 목록 페이지</a>
 	<th:block th:text="${#authentication.principal}"></th:block>
 </body>
 </html>
