--- a/src/main/resources/templates/main/home.html
+++ b/src/main/resources/templates/main/home.html
@@ -35,7 +35,7 @@
 				</select>
 			</div>
 		</section>
-		<hr>
+		<hr style="min-width: 1300px">
 		<section id="book_container">
 		</section>
 		<div id="book_page_list">
