--- a/src/main/resources/templates/main/order.html
+++ b/src/main/resources/templates/main/order.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>주문 완료</h1>
-    <a href="/">메인화면으로 돌아가기</a>
-    <a href="#">주문 내역 확인하기</a>
+    <a href="/main">메인화면으로 돌아가기</a>
+    <a href="/user/myPage/order/main">주문 내역 확인하기</a>
 </body>
 </html>
