--- a/src/main/resources/templates/user/myPage/main.html
+++ b/src/main/resources/templates/user/myPage/main.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="ko"
-      xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
->
+      xmlns:th="http://www.thymeleaf.org">
 <head>
 	<meta charset="UTF-8">
 	<title>마이페이지</title>
 </head>
 <body>
-    <h1>유저의 마이페이지 입니다.</h1>
-    <a href="/main">돌아가기</a>
-    <a href="/user/myPage/heart">찜 목록 페이지</a>
-	<th:block th:text="${#authentication.principal}"></th:block>
+<h1>유저의 마이페이지입니다^-^</h1>
+<a href="/user/myPage/heart">찜 목록 페이지로 이동하기</a> <br/>
+<a href="/user/myPage/order/main">주문 목록 페이지로 이동하기</a><br/>
+<a href="/">메인페이지로 이동하기</a>
 </body>
 </html>
+
+
+
+
+
+
