230330 AWS 연동 완료

--- a/src/main/resources/templates/main/cart.html
+++ b/src/main/resources/templates/main/cart.html
@@ -13,7 +13,7 @@
     <script src="/static/js/main/cart.js" th:src="@{/js/main/cart.js}" defer></script>
 </head>
 <body>
-    <th:block th:replace="~{/main/header :: header}"></th:block>
+    <th:block th:replace="~{main/header :: header}"></th:block>
     <hr>
     <main>
         <div id="order_process_container">
