--- a/src/main/resources/templates/main/home.html
+++ b/src/main/resources/templates/main/home.html
@@ -13,7 +13,7 @@
 	<script src="https://kit.fontawesome.com/8b1463211e.js" crossorigin="anonymous"></script>
 </head>
 <body>
-	<th:block th:replace="~{/main/header :: header}"></th:block>
+	<th:block th:replace="~{main/header :: header}"></th:block>
 	<hr>
 	<main class="padding_lr_300">
 		<section id="book_nav">
