--- a/src/main/resources/templates/user/myPage/heart.html
+++ b/src/main/resources/templates/user/myPage/heart.html
@@ -12,7 +12,7 @@
 	<script src="/static/js/user/myPage/heart.js" th:src="@{/js/user/myPage/heart.js}" defer></script>
 </head>
 <body>
-	<th:block th:replace="~{/main/header :: header}"></th:block>
+	<th:block th:replace="~{main/header :: header}"></th:block>
 	<hr>
 	<section>
 		<h2>찜 목록</h2>
