--- a/src/main/resources/static/css/main/header.css
+++ b/src/main/resources/static/css/main/header.css
@@ -1,12 +1,11 @@
 /*===== Header =====*/
 header {
-    min-width: 1300px;
+    width: 1300px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0 300px;
+    margin: 0 auto;
     height: 80px;
-    line-height: 80px;
 }
 
 .header_left {
