230802 Modify page_list function

--- a/src/main/resources/templates/main/home.html
+++ b/src/main/resources/templates/main/home.html
@@ -38,8 +38,8 @@
 		<hr style="min-width: 1300px">
 		<section id="book_container">
 		</section>
-		<div id="book_page_list">
-		</div>
+		<ul id="book_page_list">
+		</ul>
 	</main>
 </body>
 </html>
