--- a/src/main/resources/static/css/main/home.css
+++ b/src/main/resources/static/css/main/home.css
@@ -14,6 +14,10 @@ a {
     color: black;
 }
 
+li {
+    list-style: none;
+}
+
 /*===== Section 1 =====*/
 #book_nav {
     min-width: 1300px;
@@ -48,4 +52,15 @@ a {
 
 .book img {
     width: 200px;
+}
+
+#book_page_list {
+    margin: 30px 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+#book_page_list li {
+    margin: 0 10px;
 }
