--- a/src/main/resources/templates/main/header.html
+++ b/src/main/resources/templates/main/header.html
@@ -30,6 +30,7 @@
             <a href="/user/logout">로그아웃</a>
             <a href="/main/cart">장바구니</a>
             <a href="/user/myPage/main">마이페이지</a>
+            <a href="/admin/upload" sec:authorize="hasRole('ADMIN')">파일 업로드</a>
         </th:block>
     </div>
 </header>
