--- a/src/main/resources/templates/main/header.html
+++ b/src/main/resources/templates/main/header.html
@@ -13,7 +13,7 @@
 <body>
 <header th:fragment="header">
     <div class="header_left">
-        <a href="/" th:href="@{/}"><img class="logo" src="/static/img/main/kyobo_logo.png" th:src="@{/img/main/kyobo_logo.png}" alt="logo"></a>
+        <a href="/" th:href="@{/}"><img class="logo" src="https://kyobo-s3-bucket.s3.ap-northeast-2.amazonaws.com/img/main/kyobo_logo.png" th:src="@{https://kyobo-s3-bucket.s3.ap-northeast-2.amazonaws.com/img/main/kyobo_logo.png}" alt="logo"></a>
         <div id="search_bar">
             <select>
                 <option value="통합검색">통합검색</option>
