--- a/src/main/resources/templates/admin/bookmodify.html
+++ b/src/main/resources/templates/admin/bookmodify.html
@@ -14,7 +14,7 @@
 		<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
 		메인 이미지 파일: <input type="file" name="mainImageFile" accept="image/*"> <br/>
 		컨텐츠 이미지 파일: <input type="file" name="contentsImageFile" accept="image/*"> <br/>
-		ISBN: <input type="text" name="bookVO.ISBN" th:value="${bookVO.ISBN}" disabled> <br/>
+		ISBN: <input type="text" name="bookVO.ISBN" th:value="${bookVO.ISBN}" readonly> <br/>
 		TITLE: <input type="text" name="bookVO.title" th:value="${bookVO.title}"> <br/>
 		AUTHOR: <input type="text" value="" name="bookVO.author" th:value="${bookVO.author}"> <br/>
 		PUBLISHER: <input type="text" value="" name="bookVO.publisher" th:value="${bookVO.publisher}"> <br/>
