--- a/src/main/resources/templates/admin/bookmodify.html
+++ b/src/main/resources/templates/admin/bookmodify.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/8b1463211e.js" crossorigin="anonymous"></script>
 </head>
 <body>
-	<form action="/admin/manage" method="" enctype="multipart/form-data">
+	<form action="/admin/bookmodify" method="post" enctype="multipart/form-data">
 		<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
 		메인 이미지 파일: <input type="file" name="mainImageFile" accept="image/*"> <br/>
 		컨텐츠 이미지 파일: <input type="file" name="contentsImageFile" accept="image/*"> <br/>
