--- a/src/main/resources/templates/admin/bookmodify.html
+++ b/src/main/resources/templates/admin/bookmodify.html
@@ -12,16 +12,16 @@
 <body>
 	<form action="/admin/bookmodify" method="post" enctype="multipart/form-data">
 		<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
-		메인 이미지 파일: <input type="file" name="mainImageFile" accept="image/*"> <br/>
-		컨텐츠 이미지 파일: <input type="file" name="contentsImageFile" accept="image/*"> <br/>
-		ISBN: <input type="text" name="bookVO.ISBN" th:value="${bookVO.ISBN}" readonly> <br/>
-		TITLE: <input type="text" name="bookVO.title" th:value="${bookVO.title}"> <br/>
-		AUTHOR: <input type="text" value="" name="bookVO.author" th:value="${bookVO.author}"> <br/>
-		PUBLISHER: <input type="text" value="" name="bookVO.publisher" th:value="${bookVO.publisher}"> <br/>
-		CONTENTS: <textarea type="text" name="bookVO.contents" th:text="${bookVO.contents}"></textarea> <br/>
-		INTRODUCE: <textarea type="text" name="bookVO.introduce" th:text="${bookVO.introduce}"></textarea> <br/>
-		PRICE: <input type="number" name="bookVO.price" th:value="${bookVO.price}"> <br/>
-		<input type="submit" value="게시하기">
+		메인 이미지 파일: <input th:type="file" th:name="mainImageFile" accept="image/*"> <br/>
+		컨텐츠 이미지 파일: <input th:type="file" th:name="contentsImageFile" accept="image/*"> <br/>
+		ISBN: <input th:type="text" th:name="bookVO.ISBN" th:value="${bookVO.ISBN}" th:readonly> <br/>
+		TITLE: <input th:type="text" th:name="bookVO.title" th:value="${bookVO.title}"> <br/>
+		AUTHOR: <input th:type="text" name="bookVO.author" th:value="${bookVO.author}"> <br/>
+		PUBLISHER: <input th:type="text" name="bookVO.publisher" th:value="${bookVO.publisher}"> <br/>
+		CONTENTS: <textarea th:type="text" th:name="bookVO.contents" th:text="${bookVO.contents}"></textarea> <br/>
+		INTRODUCE: <textarea th:type="text" th:name="bookVO.introduce" th:text="${bookVO.introduce}"></textarea> <br/>
+		PRICE: <input th:type="number" th:name="bookVO.price" th:value="${bookVO.price}"> <br/>
+		<input type="submit" value="수정하기">
 	</form>
 	<a href="/admin/manage">관리페이지로 이동하기</a>
 </body>
