--- a/src/main/resources/templates/admin/manage.html
+++ b/src/main/resources/templates/admin/manage.html
@@ -29,6 +29,6 @@
 			</tr>
 		</tbody>
 	</table>
-	<a href="/" th:href="@{/}">메인페이지로 돌아가기</a>
+	<a href="/admin/main">관리페이지로 돌아가기</a>
 </body>
 </html>
