--- a/src/main/resources/templates/admin/upload.html
+++ b/src/main/resources/templates/admin/upload.html
@@ -23,6 +23,6 @@
 		PRICE: <input type="number" name="bookVO.price"> <br/>
 		<input type="submit" value="게시하기">
 	</form>
-	<a href="/">메인페이지로 이동하기</a>
+	<a href="/admin/main">관리페이지로 돌아가기</a>
 </body>
 </html>
