--- a/src/main/resources/templates/admin/usermanage.html
+++ b/src/main/resources/templates/admin/usermanage.html
@@ -24,6 +24,6 @@
         <tbody>
         </tbody>
     </table>
-    <a href="/">메인페이지로 돌아가기</a>
+    <a href="/admin/main">관리페이지로 돌아가기</a>
 </body>
 </html>
