230822 회원가입 페이지 기능 수정

--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -28,7 +28,7 @@
         </div>
         <div class="info_box">
             <p>비밀번호 재확인</p>
-            <input type="text">
+            <input type="text" name="password_confirm">
         </div>
         <div class="info_box">
             <p>이름</p>
