--- a/src/main/resources/static/css/main/header.css
+++ b/src/main/resources/static/css/main/header.css
@@ -1,5 +1,10 @@
 /*===== Header =====*/
-header {
+a {
+    color: black;
+    text-decoration: none;
+}
+
+.header_wrap {
     width: 1300px;
     display: flex;
     justify-content: space-between;
