--- a/src/main/resources/templates/main/header.html
+++ b/src/main/resources/templates/main/header.html
@@ -12,26 +12,28 @@
 </head>
 <body>
 <header th:fragment="header">
-    <div class="header_left">
-        <a href="/" th:href="@{/}"><img class="logo" src="https://kyobo-s3-bucket.s3.ap-northeast-2.amazonaws.com/img/main/kyobo_logo.png" th:src="@{https://kyobo-s3-bucket.s3.ap-northeast-2.amazonaws.com/img/main/kyobo_logo.png}" alt="logo"></a>
-        <div id="search_bar">
-            <select>
-                <option value="통합검색">통합검색</option>
-            </select>
-            <input type="text" placeholder="검색어를 입력해 주세요">
+    <div class="header_wrap">
+        <div class="header_left">
+            <a href="/" th:href="@{/}"><img class="logo" src="https://kyobo-s3-bucket.s3.ap-northeast-2.amazonaws.com/img/main/kyobo_logo.png" th:src="@{https://kyobo-s3-bucket.s3.ap-northeast-2.amazonaws.com/img/main/kyobo_logo.png}" alt="logo"></a>
+            <div id="search_bar">
+                <select>
+                    <option value="통합검색">통합검색</option>
+                </select>
+                <input type="text" placeholder="검색어를 입력해 주세요">
+            </div>
         </div>
-    </div>
-    <div class="header_right">
-        <th:block sec:authorize="!isAuthenticated()">
-            <a href="/user/login">로그인</a>
-            <a href="/user/register">회원가입</a>
-        </th:block>
-        <th:block sec:authorize="isAuthenticated()">
-            <a href="/user/logout">로그아웃</a>
-            <a href="/main/cart">장바구니</a>
-            <a href="/user/myPage/main">마이페이지</a>
-            <a href="/admin/main" sec:authorize="hasRole('ADMIN')">관리페이지</a>
-        </th:block>
+        <div class="header_right">
+            <th:block sec:authorize="!isAuthenticated()">
+                <a href="/user/login">로그인</a>
+                <a href="/user/register">회원가입</a>
+            </th:block>
+            <th:block sec:authorize="isAuthenticated()">
+                <a href="/user/logout">로그아웃</a>
+                <a href="/main/cart">장바구니</a>
+                <a href="/user/myPage/main">마이페이지</a>
+                <a href="/admin/main" sec:authorize="hasRole('ADMIN')">관리페이지</a>
+            </th:block>
+        </div>
     </div>
 </header>
 </body>
