--- a/src/main/resources/templates/main/home.html
+++ b/src/main/resources/templates/main/home.html
@@ -15,31 +15,33 @@
 <body>
 	<th:block th:replace="~{main/header :: header}"></th:block>
 	<hr>
-	<main class="padding_lr_300">
-		<section id="book_nav">
-			<span>전체 00건</span>
-			<div class="book_nav_right">
-				<input type="hidden" th:value="${#authentication.getName()}">
-				<input id="heart_btn" type="button" value="하트" th:onclick="insert_heart_cart_checked([[${#authentication.getName()}]], this)">
-				<input id="cart_btn" type="button" value="장바구니 담기" th:onclick="insert_heart_cart_checked([[${#authentication.getName()}]], this)">
-				<select id="search_result_order_select" default="">
-					<option value="rating">인기순</option>
-					<option value="orderCount">판매량순</option>
-					<option value="">최신순</option>
-					<option value="title">상품명순</option>
-				</select>
-				<select id="search_result_count_select">
-					<option value="8">8개씩 보기</option>
-					<option value="12">12개씩 보기</option>
-					<option value="16">16개씩 보기</option>
-				</select>
-			</div>
+	<main>
+		<section class="book_wrap">
+			<section id="book_nav">
+				<span>전체 00건</span>
+				<div class="book_nav_right">
+					<input type="hidden" th:value="${#authentication.getName()}">
+					<input id="heart_btn" type="button" value="하트" th:onclick="insert_heart_cart_checked([[${#authentication.getName()}]], this)">
+					<input id="cart_btn" type="button" value="장바구니 담기" th:onclick="insert_heart_cart_checked([[${#authentication.getName()}]], this)">
+					<select id="search_result_order_select" default="">
+						<option value="rating">인기순</option>
+						<option value="orderCount">판매량순</option>
+						<option value="">최신순</option>
+						<option value="title">상품명순</option>
+					</select>
+					<select id="search_result_count_select">
+						<option value="8">8개씩 보기</option>
+						<option value="12">12개씩 보기</option>
+						<option value="16">16개씩 보기</option>
+					</select>
+				</div>
+			</section>
+			<hr style="min-width: 1300px">
+			<section id="book_container">
+			</section>
+			<ul id="book_page_list">
+			</ul>
 		</section>
-		<hr style="min-width: 1300px">
-		<section id="book_container">
-		</section>
-		<ul id="book_page_list">
-		</ul>
 	</main>
 </body>
 </html>
