--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -12,7 +12,7 @@
         <h1>KOREAIT KYOBO 교보문고</h1>
         <div class="input_box">
             <input type="text" name="username" placeholder="아이디를 입력해주세요"> <br/>
-            <input type="text" name="password" placeholder="비밀번호를 입력해주세요"> <br/>
+            <input type="password" name="password" placeholder="비밀번호를 입력해주세요"> <br/>
         </div>
         <input type="submit" value="로그인">
         <div class="option_box">
