--- a/src/main/resources/templates/main/cart.html
+++ b/src/main/resources/templates/main/cart.html
@@ -8,13 +8,13 @@
     <meta th:name="${_csrf.parameterName}" th:content="${_csrf.token}">
     <title>장바구니</title>
     <link rel="stylesheet" href="/static/css/main/header.css" th:href="@{/css/main/header.css}">
+    <link rel="stylesheet" href="/static/css/main/footer.css" th:href="@{/css/main/footer.css}">
     <link rel="stylesheet" href="/static/css/main/cart.css" th:href="@{/css/main/cart.css}">
     <script src="https://kit.fontawesome.com/8b1463211e.js" crossorigin="anonymous"></script>
     <script src="/static/js/main/cart.js" th:src="@{/js/main/cart.js}" defer></script>
 </head>
 <body>
     <th:block th:replace="~{main/header :: header}"></th:block>
-    <hr>
     <main>
         <section class="cart_wrap">
             <div id="order_process_container">
@@ -51,7 +51,7 @@
                 </div>
             </article>
         </section>
-
     </main>
+    <th:block th:replace="~{main/footer :: footer}"></th:block>
 </body>
 </html>
