--- a/src/main/resources/templates/main/details.html
+++ b/src/main/resources/templates/main/details.html
@@ -10,6 +10,7 @@
 	<title>[[${bookVO.title}]]</title>
 	<link rel="stylesheet" href="/static/css/main/detail.css" th:href="@{/css/main/detail.css}">
 	<link rel="stylesheet" href="/static/css/main/header.css" th:href="@{/css/main/header.css}">
+	<link rel="stylesheet" href="/static/css/main/footer.css" th:href="@{/css/main/footer.css}">
 	<script src="https://kit.fontawesome.com/d19fdaba43.js" crossorigin="anonymous"></script>
 	<script src="/static/js/main/detail.js" th:src="@{/js/main/detail.js}" defer></script>
 </head>
@@ -39,6 +40,7 @@
 			<span class="view_btn">더보기</span>
 		</div>
 	</section>
+	<th:block th:replace="~{main/footer :: footer}"></th:block>
 </body>
 </html>
 
