--- a/src/main/resources/templates/main/home.html
+++ b/src/main/resources/templates/main/home.html
@@ -9,12 +9,12 @@
 	<title>KOREAIT KYOBO 교보문고</title>
 	<link rel="stylesheet" href="/css/main/home.css" th:href="@{/css/main/home.css}">
 	<link rel="stylesheet" href="/static/css/main/header.css" th:href="@{/css/main/header.css}">
+	<link rel="stylesheet" href="/static/css/main/footer.css" th:href="@{/css/main/footer.css}">
 	<script src="/js/main/home.js" th:src="@{/js/main/home.js}" defer></script>
 	<script src="https://kit.fontawesome.com/8b1463211e.js" crossorigin="anonymous"></script>
 </head>
 <body>
 	<th:block th:replace="~{main/header :: header}"></th:block>
-	<hr>
 	<main>
 		<section class="book_wrap">
 			<section id="book_nav">
@@ -43,5 +43,6 @@
 			</ul>
 		</section>
 	</main>
+	<th:block th:replace="~{main/footer :: footer}"></th:block>
 </body>
 </html>
