--- a/src/main/resources/static/css/main/header.css
+++ b/src/main/resources/static/css/main/header.css
@@ -1,4 +1,10 @@
 /*===== Header =====*/
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 a {
     color: black;
     text-decoration: none;
