--- a/src/main/resources/static/css/user/myPage/heart.css
+++ b/src/main/resources/static/css/user/myPage/heart.css
@@ -1,14 +1,8 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 section {
     width: 100%;
     max-width: 1300px;
     min-width: 1200px;
-    margin: 50px auto 0 auto;
+    margin: 0 auto;
 }
 
 #heart_page_control_bar {
