--- a/src/main/resources/templates/main/home.html
+++ b/src/main/resources/templates/main/home.html
@@ -18,7 +18,7 @@
 	<main>
 		<section class="book_wrap">
 			<section id="book_nav">
-				<span>전체 00건</span>
+				<span class="product_count">전체 00건</span>
 				<div class="book_nav_right">
 					<input type="hidden" th:value="${#authentication.getName()}">
 					<input id="heart_btn" type="button" value="하트" th:onclick="insert_heart_cart_checked([[${#authentication.getName()}]], this)">
