--- a/src/main/resources/templates/user/myPage/heart.html
+++ b/src/main/resources/templates/user/myPage/heart.html
@@ -9,12 +9,14 @@
 	<title>찜 목록</title>
 	<link rel="stylesheet" href="/static/css/main/header.css" th:href="@{/css/main/header.css}">
 	<link rel="stylesheet" href="/static/css/main/footer.css" th:href="@{/css/main/footer.css}">
+	<link rel="stylesheet" href="/static/css/user/myPage/myPageMenu.css" th:href="@{/css/user/myPage/myPageMenu.css}">
 	<link rel="stylesheet" href="/static/css/user/myPage/heart.css" th:href="@{/css/user/myPage/heart.css}">
 	<script src="https://kit.fontawesome.com/8b1463211e.js" crossorigin="anonymous"></script>
 	<script src="/static/js/user/myPage/heart.js" th:src="@{/js/user/myPage/heart.js}" defer></script>
 </head>
 <body>
 	<th:block th:replace="~{main/header :: header}"></th:block>
+	<th:block th:replace="~{user/myPage/myPage_menu :: myPageMenu}"></th:block>
 	<section>
 		<h2>찜 목록</h2>
 		<div id="heart_page_control_bar">
