--- a/src/main/resources/templates/main/cart.html
+++ b/src/main/resources/templates/main/cart.html
@@ -33,8 +33,8 @@
                     <span>전체</span>
                 </div>
                 <div>
-                    <input type="button" value="찜" onclick="delete_heart_cart('heart')">
-                    <input type="button" value="삭제" onclick="delete_heart_cart('delete')">
+                    <button onclick="delete_heart_cart('heart')"><i class="fa-regular fa-heart"></i></button>
+                    <button onclick="delete_heart_cart('delete')">삭제</button>
                 </div>
             </div>
 
