--- a/src/main/resources/templates/user/myPage/heart.html
+++ b/src/main/resources/templates/user/myPage/heart.html
@@ -26,8 +26,8 @@
 				전체
 			</div>
 			<div>
-				<input type="button" value="장바구니 담기" onclick="btn_checked(this)" th:onclick="btn_checked(this)">
-				<input type="button" value="삭제" onclick="btn_checked(this)" th:onclick="btn_checked(this)">
+				<button onclick="btn_checked(this)" th:onclick="btn_checked(this)">장바구니</button>
+				<button onclick="btn_checked(this)" th:onclick="btn_checked(this)">삭제</button>
 			</div>
 		</div>
 		<div id="heart_book_container">
