--- a/src/main/resources/templates/main/home.html
+++ b/src/main/resources/templates/main/home.html
@@ -21,8 +21,8 @@
 				<span class="product_count">전체 00건</span>
 				<div class="book_nav_right">
 					<input type="hidden" th:value="${#authentication.getName()}">
-					<input id="heart_btn" type="button" value="하트" th:onclick="insert_heart_cart_checked([[${#authentication.getName()}]], this)">
-					<input id="cart_btn" type="button" value="장바구니 담기" th:onclick="insert_heart_cart_checked([[${#authentication.getName()}]], this)">
+					<button id="heart_btn" value="하트" th:onclick="insert_heart_cart_checked([[${#authentication.getName()}]], this)"><i class="fa-regular fa-heart"></i></button>
+					<button id="cart_btn" value="장바구니" th:onclick="insert_heart_cart_checked([[${#authentication.getName()}]], this)">장바구니</button>
 					<select id="search_result_order_select" default="">
 						<option value="rating">인기순</option>
 						<option value="orderCount">판매량순</option>
