--- a/src/main/resources/templates/main/header.html
+++ b/src/main/resources/templates/main/header.html
@@ -31,7 +31,7 @@
                 <a class="logout">로그아웃</a>
                 <a href="/main/cart">장바구니</a>
                 <a href="/user/myPage/heart">마이페이지</a>
-                <a href="/admin/main" sec:authorize="hasRole('ADMIN')">관리페이지</a>
+                <a href="/admin/upload" sec:authorize="hasRole('ADMIN')">관리페이지</a>
             </th:block>
         </div>
     </div>
