--- a/src/main/resources/templates/admin/upload.html
+++ b/src/main/resources/templates/admin/upload.html
@@ -6,23 +6,31 @@
 <head>
     <meta charset="UTF-8">
     <meta th:name="${_csrf.parameterName}" th:content="${_csrf.token}">
-    <title>Title</title>
+    <title>제품등록</title>
+	<link rel="stylesheet" href="/static/css/main/header.css" th:href="@{/css/main/header.css}">
+	<link rel="stylesheet" href="/static/css/main/footer.css" th:href="@{/css/main/footer.css}">
+	<link rel="stylesheet" href="/static/css/admin/upload.css" th:href="@{/css/admin/upload.css}">
     <script src="https://kit.fontawesome.com/8b1463211e.js" crossorigin="anonymous"></script>
 </head>
 <body>
-	<form action="/admin/upload" method="post" enctype="multipart/form-data">
-		<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
-		메인 이미지 파일: <input type="file" name="mainImageFile" accept="image/*"> <br/>
-		컨텐츠 이미지 파일: <input type="file" name="contentsImageFile" accept="image/*"> <br/>
-		ISBN: <input type="text" name="bookVO.ISBN"> <br/>
-		TITLE: <input type="text" name="bookVO.title"> <br/>
-		AUTHOR: <input type="text" value="" name="bookVO.author"> <br/>
-		PUBLISHER: <input type="text" value="" name="bookVO.publisher"> <br/>
-		CONTENTS: <textarea type="text" name="bookVO.contents"></textarea> <br/>
-		INTRODUCE: <textarea type="text" name="bookVO.introduce"></textarea> <br/>
-		PRICE: <input type="number" name="bookVO.price"> <br/>
-		<input type="submit" value="게시하기">
-	</form>
-	<a href="/admin/main">관리페이지로 돌아가기</a>
+	<th:block th:replace="~{main/header :: header}"></th:block>
+	<th:block th:replace="~{admin/adminNav :: adminNav}"></th:block>
+	<article class="contents_upload_wrap">
+		<h2>제품 등록</h2>
+		<form action="/admin/upload" method="post" enctype="multipart/form-data">
+			<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+			<div><span>ISBN</span> <input type="text" name="bookVO.ISBN"></div>
+			<div><span>TITLE</span> <input type="text" name="bookVO.title"></div>
+			<div><span>AUTHOR</span> <input type="text" value="" name="bookVO.author"></div>
+			<div><span>PUBLISHER</span> <input type="text" value="" name="bookVO.publisher"></div>
+			<div><span>CONTENTS</span> <textarea type="text" name="bookVO.contents"></textarea></div>
+			<div><span>INTRODUCE</span> <textarea type="text" name="bookVO.introduce"></textarea></div>
+			<div><span>PRICE</span> <input type="number" name="bookVO.price"></div>
+			<div><span>메인 이미지 파일</span> <input type="file" name="mainImageFile" accept="image/*"></div>
+			<div><span>컨텐츠 이미지 파일</span> <input type="file" name="contentsImageFile" accept="image/*"></div>
+			<input type="submit" value="게시하기">
+		</form>
+	</article>
+	<th:block th:replace="~{main/footer :: footer}"></th:block>
 </body>
 </html>
